--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -21,6 +21,8 @@ And.Design default.less: https://github.com/ant-design/ant-design/blob/master/co
 @btn-height-lg: 40px;
 @btn-height-sm: 28px;
 
+@btn-active-color: #FF6F00;
+@btn-focus-color: #FF8F1A;
 @btn-secondary-color: @primary-color;
 @btn-secondary-bg: #fff;
 @btn-secondary-border: @primary-color;
